# acm-coffee

./: Cargo.toml  auth.sh  build.sh  camera.py  deploy.sh  id_rsa  push.sh  readme.md  run.sh  test-gpio.sh
acm-coffee-old/: acm_cs.sh  auth.sh  id_rsa.pub  run.sh
acm-coffee-old/cgi-bin/: coffeepot.py
old-old/: Cargo.toml  build.sh  deploy.sh  readme.md  run.sh  test-gpio.sh
old-old/acm-coffee-old/: asroot.sh  coffeepot.py  deploy.sh  index.html  push.sh  test.sh
old-old/src/: main.rs
src/: main.rs
