[package]
name = "acm-coffee"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]

[dependencies]
tiny_http = "0.5"
lazy_static = "1.0"
image = "*"

# rustup target add armv7-unknown-linux-gnueabihf
# sudo rm /usr/bin/ld ; sudo ln -s /usr/bin/arm-linux-gnueabihf-ld.gold /usr/bin/ld
# sudo rm /usr/bin/ld ; sudo ln -s /usr/bin/ld.gold /usr/bin/ld
# cargo build --target=armv7-unknown-linux-gnueabihf
#[target.armv7-unknown-linux-gnueabihf]
#linker = "arm-linux-gnueabihf-gcc"


